--- a/project1.html
+++ b/project1.html
@@ -87,10 +87,13 @@
 
                     <div class="equipment-UI-mockup">
                         <img src="UI Art Mockup (Equipment Screen)  - 1st Iteration.png" alt="ui mockup equipment (1st) image">
+                        <p>Inspired by Elden Ring (FromSoftware Inc.)</p>
                         <img src="Wireframe Inventory Screen (2nd Iteration).png" alt="Wireframe Equipment Screen (2nd) image">
                         <img src="Wireframe Character Screen.png" alt="Wireframe Character Screen image">
                         <img src="UI Art Mockup (Equipment Screen) - Feedback Iteration.png" alt="ui mockup feedback image">
+                        <p>Inspired by Elden Ring (FromSoftware Inc.)</p>
                         <img src="UI Art Mockup (Character Screen).png" alt="ui mockup character image">
+                        <p>Inspired by Elden Ring (FromSoftware Inc.)</p>
                     </div>
                 </div>
             </div>
@@ -102,6 +105,7 @@
                     <h4>Gameplay Wireframe and UI Mockup</h4>
                     <img src="Wireframe Gameplay Screen.png" alt="wireframe gameplay image">
                     <img src="UI Art Mockup (Gameplay Screen).png" alt="ui mockup gameplay image">
+                    <p>Inspired by Elden Ring (FromSoftware Inc.)</p>
                 </div>
             </div>
         </section>
