--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                         <ul>
                             <li><a href="#work">Work</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="#resume">Resume</a></li>
+                            <li><a href="Johnson_Alan_UX_UI_Resume.pdf" target="_blank">Resume</a></li>
+                            <li><a href="UXG_ Recommendation Letter - Alan Johnson.png" target="_blank">Reference Letter</a></li>
                         </ul>
                     </div>
                 </div>
