Second Commit to Portfolio website

--- a/about.html
+++ b/about.html
@@ -25,11 +25,12 @@
                     <div class="logo-container">
                         <a href="index.html"><img src="Main Logo.png" alt="main logo image"></a>
                     </div>
-                    <div class="navbar-list-about">
+                    <div class="navbar-list">
                         <ul>
                             <li><a href="index.html">Work</a></li>
                             <li><a class="active" href="#about">About</a></li>
-                            <li><a href="#resume">Resume</a></li>
+                            <li><a href="Johnson_Alan_UX_UI_Resume.pdf" target="_blank">Resume</a></li>
+                            <li><a href="UXG_ Recommendation Letter - Alan Johnson.png" target="_blank">Reference Letter</a></li>
                         </ul>
                     </div>
                 </div>
