--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
         </section>
 
 
+        <!-- HERO Home Page -->
+
+        <section>
+            <div class="hero-home-page-container">
+                <div class="hero-home-page-title">
+                    <h2>Hi! I'm Alan!</h2>
+                    <p>I'm a Software Developer.  I'm a gamer, nerd, and gym addict.</p>
+                    <p>Please take a look around and reach out below!</p><br>
+                    <a href="about.html">Contact Me</a>
+                </div>
+            </div>
+        </section>
+
+
         <!-- WORK SECTION -->
 
         <section id="work">
