First Commit for Responsiveness (Laptop Screen)

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="hero-home-page-container">
                 <div class="hero-home-page-title">
                     <h2>Hi! I'm Alan!</h2>
-                    <p>I'm a Software Developer.  I'm a gamer, nerd, and gym addict.</p>
-                    <p>Please take a look around and reach out below!</p><br>
+                    <p>I'm an aspiring UX/UI Designer.  I'm a gamer, nerd, and gym addict.</p>
+                    <p>Please take a look around and reach out below if you want to talk!</p><br>
                     <a href="about.html">Contact Me</a>
                 </div>
             </div>
