2nd Iteration of Website (including 5 Projects)

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                 
                 <div class="about-content">
                     <div class="about-first-block">
-                        <p>Currently, I am a Software Developer based in Maryland and currently 
+                        <p>I am a Software Developer based in Maryland and currently 
                             working for a Software Government Contractor.</p>
                         <p>My passion for gaming and UX/UI Design came from beautiful HUDs and 
                             UI Menus in games such as Destiny, Dead Space, Marvel Rivals, and 
