--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <!-- WORK SECTION -->
 
-        <section id="work">
+        <section class="home-page-work-container" id="work">
             <div class="work-title">
                 <h2>My Work</h2>
             </div>
@@ -64,15 +64,19 @@
                     <h3>CALL OF DUTY - Black Ops 6 - REDESIGN</h3>
                 </div>
                 <div class="project2">
-                    <a href="ELVTR_Project.html"><img class="zoom" src="UXUI For Gaming Hero Image.png" alt="Project 2 Image"></a>
-                    <h3>ELVTR UX/UI For Gaming Coursework</h3>
+                    <a href="Yoshi's_Island_Project.html"><img class="zoom" src="CANDY CRUSH Yoshi's Island Edition.png" alt="Project 2 Image"></a>
+                    <h3>CANDY CRUSH - Yoshi's Island Edition - UX/UI Mobile Design</h3>
                 </div>
                 <div class="project3">
                     <a href="PIRATE_DASH_Project.html"><img class="zoom" src="PIRATE DASH Hero Banner.png" alt="Project 3 Image"></a>
                     <h3>PIRATE DASH - UX/UI Mobile Design</h3>
                 </div>
                 <div class="project4">
-                    <a href="https://alanjohnsondev.github.io/nine30-company/" target="_blank"><img class="zoom" src="Nine30-Project.png" alt="Project 4 Image"></a>
+                    <a href="ELVTR_Project.html"><img class="zoom" src="UXUI For Gaming Hero Image.png" alt="Project 4 Image"></a>
+                    <h3>ELVTR UX/UI For Gaming Coursework - ELDEN RING</h3>
+                </div>
+                <div class="project5">
+                    <a href="NINE30_Project.html"><img class="zoom" src="Nine30-Project.png" alt="Project 5 Image"></a>
                     <h3>Nine 30 Consulting - Web Development</h3>
                 </div>
             </div>
