--- a/BLACK_OPS_6_Project.html
+++ b/BLACK_OPS_6_Project.html
@@ -8,7 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.html">
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="responsive.css">
+        <link rel="stylesheet" href="responsiveLaptop.css">
+        <link rel="stylesheet" href="responsiveTablet.css">
+        <link rel="stylesheet" href="responsiveMobile.css">
+        <link rel="stylesheet" href="responsiveSmallMobile.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
