Uploaded Project 6 - Galaxy X

--- a/index.html
+++ b/index.html
@@ -88,23 +88,27 @@
             </div>
             <div class="work-container">
                 <div class="project1">
-                    <a href="BLACK_OPS_6_Project.html"><img class="zoom" src="Call of Duty - Black Ops 6 - Redesign (Hero Image).png" alt="Project 1 Image"></a>
-                    <h3>CALL OF DUTY - Black Ops 6 - REDESIGN</h3>
+                    <a href="GALAXY_X_Project.html"><img class="zoom" src="galaxyX_HeroImage.png" alt="Project 1 Image"></a>
+                    <h3>GALAXY X - Unreal Engine Main Menu</h3>
                 </div>
                 <div class="project2">
-                    <a href="Yoshi's_Island_Project.html"><img class="zoom" src="CANDY CRUSH Yoshi's Island Edition.png" alt="Project 2 Image"></a>
-                    <h3>CANDY CRUSH - Yoshi's Island Edition</h3>
+                    <a href="BLACK_OPS_6_Project.html"><img class="zoom" src="Call of Duty - Black Ops 6 - Redesign (Hero Image).png" alt="Project 2 Image"></a>
+                    <h3>CALL OF DUTY - Black Ops 6 - REDESIGN</h3>
                 </div>
                 <div class="project3">
-                    <a href="PIRATE_DASH_Project.html"><img class="zoom" src="PIRATE DASH Hero Banner.png" alt="Project 3 Image"></a>
-                    <h3>PIRATE DASH - UX/UI Mobile Design</h3>
+                    <a href="Yoshi's_Island_Project.html"><img class="zoom" src="CANDY CRUSH Yoshi's Island Edition.png" alt="Project 3 Image"></a>
+                    <h3>CANDY CRUSH - Yoshi's Island Edition</h3>
                 </div>
                 <div class="project4">
-                    <a href="ELVTR_Project.html"><img class="zoom" src="UXUI For Gaming Hero Image.png" alt="Project 4 Image"></a>
-                    <h3>ELVTR UX/UI For Gaming Coursework</h3>
+                    <a href="PIRATE_DASH_Project.html"><img class="zoom" src="PIRATE DASH Hero Banner.png" alt="Project 4 Image"></a>
+                    <h3>PIRATE DASH - UX/UI Mobile Design</h3>
                 </div>
                 <div class="project5">
-                    <a href="NINE30_Project.html"><img class="zoom" src="Nine30-Project.png" alt="Project 5 Image"></a>
+                    <a href="ELVTR_Project.html"><img class="zoom" src="UXUI For Gaming Hero Image.png" alt="Project 5 Image"></a>
+                    <h3>ELVTR UX/UI For Gaming Coursework</h3>
+                </div>
+                <div class="project6">
+                    <a href="NINE30_Project.html"><img class="zoom" src="Nine30-Project.png" alt="Project 6 Image"></a>
                     <h3>Nine 30 Consulting - Web Development</h3>
                 </div>
             </div>
