Updated Resume and About page

--- a/about.html
+++ b/about.html
@@ -56,14 +56,17 @@
                 
                 <div class="about-content">
                     <div class="about-first-block">
-                        <p>I am a Software Developer based in Maryland and currently 
-                            working for a Software Government Contractor.</p>
+                        <p>I am a <strong>Lead UI Artist</strong> for Omens by Blue Light Studios.  We are currently working on
+                            a beautiful narrative driven game coming out in a few years.</p>
+                        <p>Also, I am UX/UI Designer for Monoblue Games and Spark of Genius Studios.  
+                            I am working on 3 collective titles for these two gaming studios.</p>
                         <p>My passion for gaming and UX/UI Design came from beautiful HUDs and 
                             UI Menus in games such as Destiny, Dead Space, Marvel Rivals, and 
                             Metroid Prime to name a few.</p>
-                        <p>My 4 years of experience in Web Design and Software Development have
+                        <p>My 5 years of experience in Web Design and Software Development have
                             been good, but I am learning that I want to be apart of something 
-                            more fun and exciting.  So, I am shifting into the gaming industry to become a  UX/UI Designer.</p>
+                            more fun and exciting.  Gaming has always been a huge passion of mine and 
+                            now I get to create games for others and <strong>change their lives</strong>, just like gaming has done for <strong>me</strong>.</p>
                     </div>
                 
                     <br>
