--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             <div class="hero-home-page-container">
                 <div class="hero-home-page-title">
                     <h2>Hi! I'm Alan!</h2>
-                    <p>I'm a UX/UI Designer at Spark of Genius Studios. I'm a gamer, nerd, and gym addict.</p>
+                    <p>I'm a Lead UI Artist at Omens by Blue Light Studios.</p>
+                    <p>I'm also a UX/UI Designer at Monoblue Games and Spark of Genius Studios.</p>
                     <p>Please take a look around and reach out below if you want to talk!</p><br>
                     <a href="about.html">Contact Me</a>
                 </div>
