Updated Index and About page

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
             <div class="hero-home-page-container">
                 <div class="hero-home-page-title">
                     <h2>Hi! I'm Alan!</h2>
-                    <p>I'm a Lead UI Artist at Omens by Blue Light Studios.</p>
-                    <p>I'm also a UX/UI Designer at Monoblue Games and Spark of Genius Studios.</p>
+                    <p>I am an aspiring UX/UI Designer, and currently a Software Developer.</p>
                     <p>Please take a look around and reach out below if you want to talk!</p><br>
                     <a href="about.html">Contact Me</a>
                 </div>
