--- a/about.html
+++ b/about.html
@@ -56,10 +56,7 @@
                 
                 <div class="about-content">
                     <div class="about-first-block">
-                        <p>I am a <strong>Lead UI Artist</strong> for Omens by Blue Light Studios.  We are currently working on
-                            a beautiful narrative driven game coming out in a few years.</p>
-                        <p>Also, I am UX/UI Designer for Monoblue Games and Spark of Genius Studios.  
-                            I am working on 3 collective titles for these two gaming studios.</p>
+                        <p>I am a Software Developer aspiring to be a <strong>UX/UI Designer</strong>.</p>
                         <p>My passion for gaming and UX/UI Design came from beautiful HUDs and 
                             UI Menus in games such as Destiny, Dead Space, Marvel Rivals, and 
                             Metroid Prime to name a few.</p>
@@ -72,7 +69,7 @@
                     <br>
                     <div class="about-second-block">
                         <h2>I'm Currently...</h2>
-                        <p><strong>Playing: </strong>Clair Obscur: Expedition 33, Hollow Knight, and Metroid Dread</p>
+                        <p><strong>Playing: </strong>Clair Obscur: Expedition 33, Call of Duty: Black Ops 6, and Metroid Dread</p>
                     </div>
                     <br>
                     <div class="about-third-block">
